--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -189,7 +189,7 @@
       },
       "source": [
         "# マークダウンと %%latex の違い\r\n",
-        "1. コードセルの %%latex 以降 MathJax のルールが適用される。\r\n",
+        "1. コードセルに %%latex と書くとその行以降 mathjax のルールが適用される。\r\n",
         "1. %%latex以降にバックスラッシュ \\ でエスケープされていない \\$ マークがあると latex で解釈せずに入力のまま出力する。 \r\n",
         "1. % 記号はコメント記号なので文法上は許されるが、% 記号以降が出力されないのでバックスラッシュ \\ でエスケープする必要がある。\r\n",
         "1. バックスラッシュ \\ 自体は \\backslash と書く。 波記号 チルダ tilde ~ は \\tilde{}、キャレット、ハット記号、サーカムフレックス、circumflex ^ は \\hat{} になる。\r\n",
@@ -299,7 +299,9 @@
         "id": "VQ5cdQKxB0lO"
       },
       "source": [
-        "$$ E=mc^2$$\r\n",
+        "マークダウンで \\\\$ マークで囲むと latex(mathjax) になる。 \\\\$\\\\$ と 2個の \\\\$ マークで囲むと行替えされ、センタリングされた数式になる。\r\n",
+        "\r\n",
+        "$ E=mc^2$\r\n",
         "\r\n",
         "ここで $c$ は光速をあらわし、値は次の通り。  \r\n",
         "\r\n",
