Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -323,7 +323,7 @@
         "E =mc^2 \\\\[0.8em]\n",
         "c = 299{,}792{,}458 \\, \\mathrm{m/s}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,25 +380,14 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Br_SG3tV5jba"
-      },
-      "source": [
-        "水平方向の空白の実験\r\n",
-        "\r\n",
-        "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン  \r\n",
-        "a~b~c~d~e~f~g~ tilde  \r\n",
-        "a~~b~~c~~d~~e~~f~~g~~ tilde2  \r\n",
-        "a\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース  \r\n",
-        "a\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ  \r\n",
-        "a\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "s98H-qzjKkTo"
+        "id": "s98H-qzjKkTo",
+        "outputId": "0049d49a-8bf1-4bea-bceb-382018671831",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
       },
       "source": [
         "# 水平方向の空白の実験\r\n",
@@ -410,8 +399,21 @@
         "a\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\r\n",
         "a\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン\\\\\na~b~c~d~e~f~g~ tilde\\\\\na~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\na\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\na\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\na\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -578,6 +580,15 @@
       },
       "source": [
         "# 括弧\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mAcesE3QV7_j"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
