--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODFX1eT3oENjVdoKXBkH71",
+      "authorship_tag": "ABX9TyNBJ/EE19ZaffIz8+ccI8/7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,221 +45,120 @@
         "id": "MGwz53xnymZq"
       },
       "source": [
-        "有向線分 $\\mathrm{AB}$ を \r\n",
-        "$\\overrightarrow{\\mathrm{AB}}$ \r\n",
-        "で表す。 \r\n",
+        "**ベクトルの表示** \r\n",
         "\r\n",
-        "ベクトルの大きさを \r\n",
-        "$|\\overrightarrow{\\mathrm{AB}}|$ \r\n",
-        "と書く。 \r\n",
+        "有向線分 $\\mathrm{AB}$ を $\\overrightarrow{\\mathrm{AB}}$ で表す。 \r\n",
         "\r\n",
-        "$\\vec a , \\vec b , | \\vec a |$ \r\n",
-        "と書くこともある。 \r\n",
+        "ベクトルの大きさを  $|\\overrightarrow{\\mathrm{AB}}|$ と書く。 \r\n",
+        "\r\n",
+        "$\\vec a , \\mathbf{a} , | \\vec a |$ と書くこともある。 \r\n",
         "   \r\n",
         "大きさが 1 であるベクトルを単位ベクトルという。 "
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 208
-        },
-        "id": "eG4nc47rO_eg",
-        "outputId": "82ceafb3-4458-46f8-f7f2-2824d5241dce"
+        "id": "m05YOR5xdkpL"
       },
       "source": [
-        "%%latex\r\n",
-        "有向線分 \\mathrm{AB} を \\\\\r\n",
-        "\\overrightarrow{\\mathrm{AB}} \\\\\r\n",
-        "で表す。 \\\\\r\n",
-        "ベクトルの大きさを \\\\\r\n",
-        "|\\overrightarrow{\\mathrm{AB}}| \\\\\r\n",
-        "と書く。 \\\\\r\n",
-        "\\vec a , \\vec b , | \\vec a | \\\\\r\n",
-        "と書くこともある。 \\\\\r\n",
-        "   \\\\\r\n",
-        "大きさが 1 であるベクトルを単位ベクトルという。 \\\\"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "有向線分 \\mathrm{AB} を \\\\\n\\overrightarrow{\\mathrm{AB}} \\\\\nで表す。 \\\\\nベクトルの大きさを \\\\\n|\\overrightarrow{\\mathrm{AB}}| \\\\\nと書く。 \\\\\n\\vec a , \\vec b , | \\vec a | \\\\\nと書くこともある。 \\\\\n   \\\\\n大きさが 1 であるベクトルを単位ベクトルという。 \\\\",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**同値**  \r\n",
+        "$\\vec a , \\vec b$ が等しいというのは、向きが同じで大きさが等しいことでこれを $\\vec a = \\vec b$ で表す。"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 99
-        },
-        "id": "wJCdXBKuFHwO",
-        "outputId": "4446ad11-632c-42c0-de23-3be8f43efcbc"
+        "id": "RblMad6ueDr_"
       },
       "source": [
-        "%%latex\r\n",
-        "\\vec a , \\vec b \\\\\r\n",
-        "が等しいというのは、向きが同じで大きさが等しいことでこれを \\\\\r\n",
-        "\\vec a = \\vec b \\\\\r\n",
-        "で表す。\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\vec a , \\vec b \\\\\nが等しいというのは、向きが同じで大きさが等しいことでこれを \\\\\n\\vec a = \\vec b \\\\\nで表す。",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**加法** $\\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}=\\overrightarrow{\\mathrm{OB}}$  \r\n",
+        "**減法** $\\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}=\\overrightarrow{\\mathrm{BA}}$  \r\n",
+        "**実数倍** $k \\overrightarrow{a}$  \r\n",
+        "**交換法則** $\\overrightarrow{a}+\\overrightarrow{b}=\\overrightarrow{b}+\\overrightarrow{a}$  \r\n",
+        "**結合法則** $(\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})$"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "JmcKt65Ky4he"
+        "id": "iTLGieE3e66R"
       },
       "source": [
-        "# テキストセルにマークダウンに latex をまぜて書くと数式が自然な感じに文章の中に書けるが、\r\n",
-        "# latex でどう書いたかは編集に入らないと見ることができない\r\n",
+        "**平行**  \r\n",
         "\r\n",
-        "# コードセルに %%latex で書くと、マークダウンは使えないが、数式のソースが見えて便利なので\r\n",
-        "# こちらをメインに使うと思う。\r\n",
+        "平行は\\, $\\overrightarrow{a} \\parallel \\overrightarrow{b}$ と書く。  \r\n",
+        "日本の平行記号は $/\\!\\!/$というように斜めに書くが、latex では縦の 2本線である。  \r\n",
         "\r\n",
-        "# %%latex コマンドを入れる前までは # がコメントで latex 内では % コメントで # が使えない。"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
-        "id": "kd9qUf_qQ0fy",
-        "outputId": "525a509d-d2f1-432a-86fe-0b69b686c42f"
-      },
-      "source": [
-        "%%latex\r\n",
-        "加法 \\quad \\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}=\\overrightarrow{\\mathrm{OB}}\\\\\r\n",
-        "減法 \\quad \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}=\\overrightarrow{\\mathrm{BA}}\\\\\r\n",
-        "実数倍 \\quad k \\overrightarrow{a}\\\\\r\n",
-        "交換法則 \\quad \\overrightarrow{a}+\\overrightarrow{b}=\\overrightarrow{b}+\\overrightarrow{a}\\\\\r\n",
-        "結合法則 \\quad (\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "加法 \\quad \\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}=\\overrightarrow{\\mathrm{OB}}\\\\\n加法 \\quad \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}=\\overrightarrow{\\mathrm{BA}}\\\\\n実数倍 \\quad k \\overrightarrow{a}\\\\\n交換法則 \\quad \\overrightarrow{a}+\\overrightarrow{b}=\\overrightarrow{b}+\\overrightarrow{a}\\\\\n結合法則 \\quad (\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**ベクトルの平行条件**  \r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0$ のとき\r\n",
+        "$\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Longleftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b}$ となる実数 $k$ がある。  \r\n",
+        "\r\n",
+        "**分解**   \r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a},\r\n",
+        "\\neg (\\overrightarrow{a} \\parallel \\overrightarrow{b})$ のとき\r\n",
+        "任意のベクトル $\\overrightarrow{p}$ は、次の形にただ1通りに表される。  \r\n",
+        "\r\n",
+        "$\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b}$ \r\n",
+        "\r\n",
+        "ただし,\\, s,\\, t\\, は実数。  \r\n",
+        "\r\n",
+        "このことから、次の性質が成り立つ。$k,l,m,n$ は実数とする。   \r\n",
+        "\r\n",
+        "$k\\overrightarrow{a} + l \\overrightarrow{b} = m \\overrightarrow{a} + n\\overrightarrow{b} \\Longleftrightarrow  k=m,\\, l=n$   \r\n",
+        "\r\n",
+        "特に  \r\n",
+        "\r\n",
+        "$k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Longleftrightarrow  k=l=0 $"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 302
-        },
-        "id": "xAz52PQFUKJI",
-        "outputId": "e43970c8-1c48-4d4a-b139-5e6f3ac21833"
+        "id": "D8abM6nThq0Y"
       },
       "source": [
-        "%%latex\r\n",
-        "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\r\n",
-        "日本の平行記号は~//~というように斜めに書くが、latex~では縦の~2~本線である。\r\n",
-        "\\\\[0.8em]\r\n",
-        "ベクトルの平行条件\\quad \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\r\n",
-        "\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Longleftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\r\n",
-        "\\\\[1em]\r\n",
-        "分解 \\\\\r\n",
-        "\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \r\n",
-        "\\overrightarrow{b} が平行でないとき, \\\\\r\n",
-        "任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\r\n",
-        "\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\[0.8em]\r\n",
-        "このことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\r\n",
-        "k\\overrightarrow{a} + l \\overrightarrow{b} = m \\overrightarrow{a} + n\\overrightarrow{b} \\Longleftrightarrow  k=m,\\, l=n \\\\\r\n",
-        "特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Longleftrightarrow  k=l=0 "
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "平行は\\, \\overrightarrow{a} \\parallel \\overrightarrow{b} \\, と書く。\\\\\n日本の平行記号は~//~というように斜めに書くが、latex~では縦の~2~本線である。\n\\\\[0.8em]\nベクトルの平行条件\\quad \\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\,のとき\n\\overrightarrow{a} \\parallel \\overrightarrow{b} \\Longleftrightarrow  \\overrightarrow{b} = k \\overrightarrow{b} となる実数\\, k \\,がある。\\\\\n\\\\[1em]\n分解 \\\\\n\\overrightarrow{a} \\neq 0, \\overrightarrow{b} \\neq 0 \\, \\overrightarrow{a} と \n\\overrightarrow{b} が平行でないとき, \\\\\n任意のベクトル\\overrightarrow{p} は、次の形にただ1通りに表される。\\\\\n\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b} \\quad ただし,\\, s,\\, t\\, は実数。\\\\[0.8em]\nこのことから、次の性質が成り立つ。k,l,m,n\\, は実数とする。 \\\\\nk\\overrightarrow{a} + l \\overrightarrow{b} = m \\overrightarrow{a} + n\\overrightarrow{b} \\Longleftrightarrow  k=m,\\, l=n \\\\\n特に\\,  k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Longleftrightarrow  k=l=0 ",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**ベクトルの成分、成分による演算**\r\n",
+        "\r\n",
+        "1. 基本ベクトル表示  \r\n",
+        "座標平面の原点を O とし、ベクトル $\\overrightarrow{a}$ に対して $\\overrightarrow{a}  = \\overrightarrow{\\mathrm{OA}}$ となる点 $\\mathrm{A}$\r\n",
+        " をとり、  \r\n",
+        "$\\mathrm{A}$ の座標を $(a_1,a_2)$ とするとき、$\\overrightarrow{a}$ は次のように表される。  \r\n",
+        "$\\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}$  \r\n",
+        "$\\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1)$ を基本ベクトルという。\r\n",
+        "\r\n",
+        "2. 相等  \r\n",
+        "$(a_1,a_2)=(b_1,b_2) \\Longleftrightarrow a_1=b_1,a_2=b_2$  \r\n",
+        "特に  \r\n",
+        "$(a_1,a_2)=\\overrightarrow{0} \\Longleftrightarrow a_1=0, a_2=0$\r\n"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Q3gWUMvSUYQq",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 212
-        },
-        "outputId": "548684b5-0a0b-45dd-be64-8e713cd8cbd1"
+        "id": "aBgyl4SEj7Fb"
       },
       "source": [
-        "# ベクトルの成分、成分による演算\r\n",
-        "%%latex\r\n",
-        "ベクトルの成分、成分による演算 \\\\\r\n",
-        "1. 座標平面の原点を O とし、ベクトル \\overrightarrow{a} に対して \\overrightarrow{a}  = \\overrightarrow{\\mathrm{OA}} となる点 \\mathrm{A} をとり、\\\\\r\n",
-        "\\quad \\mathrm{A} の座標を(a_1,a_2)とするとき、\\overrightarrow{a} は次のように表される。\\\\\r\n",
-        "\\quad 基本ベクトル表示 \\quad \\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}\\\\\r\n",
-        "\\quad \\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1) を基本ベクトルという。\\\\[1em]\r\n",
-        "2. 相等 \\quad (a_1,a_2)=(b_1,b_2) \\Longleftrightarrow a_1=b_1,a_2=b_2\\\\\r\n",
-        "\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Longleftrightarrow a_1=0, a_2=0\\\\[1em]"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "ベクトルの成分、成分による演算 \\\\\n1. 座標平面の原点を O とし、ベクトル \\overrightarrow{a} に対して \\overrightarrow{a}  = \\overrightarrow{\\mathrm{OA}} となる点 \\mathrm{A} をとり、\\\\\n\\quad \\mathrm{A} の座標を(a_1,a_2)とするとき、\\overrightarrow{a} は次のように表される。\\\\\n\\quad 基本ベクトル表示 \\quad \\overrightarrow{a}=a_1 \\overrightarrow{e_1} + a_2 \\overrightarrow{e_2}\\\\\n\\quad \\overrightarrow{e_1}=(1,0),\\overrightarrow{e_2}=(0,1) を基本ベクトルという。\\\\[1em]\n2.相等 \\quad (a_1,a_2)=(b_1,b_2) \\Leftrightarrow a_1=b_1,a_2=b_2\\\\\n\\quad 特に (a_1,a_2)=\\overrightarrow{0} \\Leftrightarrow a_1=0, a_2=0\\\\[1em]",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "3. 大きさ   \r\n",
+        "$\\overrightarrow{a}=(a_1,a_2)$ のとき、$|\\overrightarrow{a}|=\\sqrt{a_1^2+a_2^2}$\r\n",
+        "\r\n",
+        "4. 演算  \r\n",
+        "$k, l$ を実数とするとき  \r\n",
+        "ⓐ $(a_1,a_2)=(b_1,b_2)=(a_1+b_1, a_2+b_2)$  \r\n",
+        "ⓑ $k(a_1, a_2)=(ka_1, ka_2)$    \r\n",
+        "一般に $k(a_1, a_2) + l(b_1,b_2) = (k a_1+l b_1, k a_2+l b_2)$  \r\n",
+        "特に $k=1, l=-1$ のとき $(a_1, a_2) - (b_1,b_2) = (a_1-b_1, a_2-b_2)$\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vOnTPmkBdIQF"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -981,7 +880,7 @@
         "4.~2~平面のなす角\\\\\r\n",
         "2~平面の交線上の~1~点から交線に垂直に平面上に引いた~2~直線のなす角"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1019,7 +918,7 @@
         "2.~直線と平面の垂直\\\\[0.8em]\r\n",
         "直線~h~が、平面~\\alpha~上のすべての直線に垂直であるとき、~h~は~\\alpha~に垂直であるといい、h \\perp \\alpha~で表す。\\\\\r\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1054,7 +953,7 @@
         "\r\n",
         "座標平面 \\quad x~軸と~y~軸、~z~軸"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
