--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBJ/EE19ZaffIz8+ccI8/7",
+      "authorship_tag": "ABX9TyMpxBb7J7M3+rvfNIooTHaB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,50 +155,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vOnTPmkBdIQF"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        },
-        "id": "sr8GDOHwY3Lg",
-        "outputId": "642219fc-dfba-4b0f-d2d9-aee62671f630"
-      },
-      "source": [
-        "%%latex\r\n",
-        "3. 大きさ \\quad \\overrightarrow{a}=(a_1,a_2) のとき、|\\overrightarrow{a}|=\\sqrt{a_1^2+a_2^2}\\\\[1em]\r\n",
-        "4. 演算 \\quad k, l を実数とするとき\\\\\r\n",
-        "\\quad \\bullet \\quad (a_1,a_2)=(b_1,b_2)=(a_1+b_1, a_2+b_2)\\\\\r\n",
-        "\\quad \\bullet \\quad k(a_1, a_2)=(ka_1, ka_2)\\\\\r\n",
-        "\\quad 一般に k(a_1, a_2) + l(b_1,b_2) = (k a_1+l b_1, k a_2+l b_2)\\\\\r\n",
-        "\\quad 特にk=1, l=-1 のとき (a_1, a_2) - (b_1,b_2) = (a_1-b_1, a_2-b_2)\\\\"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "3. 大きさ \\quad \\overrightarrow{a}=(a_1,a_2) のとき、|\\overrightarrow{a}|=\\sqrt{a_1^2+a_2^2}\\\\[1em]\n4. 演算 \\quad k, l を実数とするとき\\\\\n\\quad \\bullet \\quad (a_1,a_2)=(b_1,b_2)=(a_1+b_1, a_2+b_2)\\\\\n\\quad \\bullet \\quad k(a_1, a_2)=(ka_1, ka_2)\\\\\n\\quad 一般に k(a_1, a_2) + l(b_1,b_2) = (k a_1+l b_1, k a_2+l b_2)\\\\\n\\quad 特にk=1, l=-1 のとき (a_1, a_2) - (b_1,b_2) = (a_1-b_1, a_2-b_2)\\\\",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "s4WfxCfqk7PH"
       },
       "source": [
@@ -206,35 +162,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "id": "W7PxgE-xk_Ut",
-        "outputId": "772c397e-588d-4bf2-b19c-bfbb722d30a1"
+        "id": "jcC6M8RXZzyb"
       },
       "source": [
-        "# 点の座標とベクトルの成分\r\n",
-        "%%latex\r\n",
-        "2点 \\mathrm{A}(a_1,a_2), \\mathrm{B}(b_1,b_2)について、\\overrightarrow{\\mathrm{AB}} = (b_1-a_1, b_2-a_2)\\\\\r\n",
-        "ベクトル\\overrightarrow{\\mathrm{AB}}の大きさ |\\overrightarrow{\\mathrm{AB}}|=\\sqrt{(b_1-a_1)^2 + (b_2-a_2)^2}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "2点 \\mathrm{A}(a_1,a_2), \\mathrm{B}(b_1,b_2)について、\\overrightarrow{\\mathrm{AB}} = (b_1-a_1, b_2-a_2)\\\\\nベクトル\\overrightarrow{\\mathrm{AB}}の大きさ |\\overrightarrow{\\mathrm{AB}}|=\\sqrt{(b_1-a_1)^2 + (b_2-a_2)^2}",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**点の座標とベクトルの成分の関係**\r\n",
+        "\r\n",
+        "\r\n",
+        "2点 $\\mathrm{A}(a_1,a_2), \\mathrm{B}(b_1,b_2)$ について、$\\overrightarrow{\\mathrm{AB}} = (b_1-a_1, b_2-a_2)$\r\n",
+        "\r\n",
+        "ベクトル $\\overrightarrow{\\mathrm{AB}}$ の大きさ $|\\overrightarrow{\\mathrm{AB}}|=\\sqrt{(b_1-a_1)^2 + (b_2-a_2)^2}$"
       ]
     },
     {
@@ -247,119 +185,106 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
-        },
-        "id": "_6bWGJyymGmm",
-        "outputId": "a459e8b8-5225-4e96-b517-63f2d42fade2"
+        "id": "DnACROlpaPwR"
       },
       "source": [
-        "# ベクトルの内積\r\n",
-        "%%latex\r\n",
-        "ベクトルの内積の定義\\\\\r\n",
-        "\\overrightarrow{0}~でない 2つのベクトル~\\overrightarrow{a}, \\overrightarrow{b}~のなす角を~\\theta~とする。\\\\\r\n",
-        "このとき、積~|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta~を~\\overrightarrow{a}~と~\\overrightarrow{b}~の内積といい、\r\n",
-        "\\overrightarrow{a} \\cdot \\overrightarrow{b}~で表す。\\\\\r\n",
-        "すなわち内積~\\overrightarrow{a} \\cdot \\overrightarrow{b}~は\\\\[1em]\r\n",
-        "\\quad \\overrightarrow{a} \\cdot \\overrightarrow{b} =|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta\r\n",
-        "\\quad ただし \\quad 0^\\circ \\leq \\theta \\leq 180^\\circ \\\\[1em]\r\n",
-        "で定義される実数である。\\\\\r\n",
-        "\\overrightarrow{a}=\\overrightarrow{0}~または~\\overrightarrow{b}=\\overrightarrow{0}~のときは~\r\n",
-        "\\overrightarrow{a} \\cdot \\overrightarrow{b} = 0 ~と定める。"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "ベクトルの内積の定義\\\\\n\\overrightarrow{0}~でない 2つのベクトル~\\overrightarrow{a}, \\overrightarrow{b}~のなす角を~\\theta~とする。\\\\\nこのとき、積~|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta~を~\\overrightarrow{a}~と~\\overrightarrow{b}~の内積といい、\n\\overrightarrow{a} \\cdot \\overrightarrow{b}~で表す。\\\\\nすなわち内積~\\overrightarrow{a} \\cdot \\overrightarrow{b}~は\\\\[1em]\n\\quad \\overrightarrow{a} \\cdot \\overrightarrow{b} =|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta\n\\quad ただし \\quad 0^\\circ \\leq \\theta \\leq 180^\\circ \\\\[1em]\nで定義される実数である。\\\\\n\\overrightarrow{a}=\\overrightarrow{0}~または~\\overrightarrow{b}=\\overrightarrow{0}~のときは~\\overrightarrow{a} \\cdot \\overrightarrow{b} = 0 ~と定める。",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**ベクトルの内積**\r\n",
+        "\r\n",
+        "**ベクトルの内積の定義**  \r\n",
+        "\r\n",
+        "$\\overrightarrow{0}$ でない 2つのベクトル $ \\overrightarrow{a}, \\overrightarrow{b}$ のなす角を $ \\theta$ とする。  \r\n",
+        "\r\n",
+        "このとき、積 $ |\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta$ を$ \\overrightarrow{a}$ と $ \\overrightarrow{b}$ の内積といい、\r\n",
+        "$\\overrightarrow{a} \\cdot \\overrightarrow{b}$ で表す。  \r\n",
+        "\r\n",
+        "すなわち内積 $ \\overrightarrow{a} \\cdot \\overrightarrow{b}$ は  \r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\cdot \\overrightarrow{b} =|\\overrightarrow{a}||\\overrightarrow{b}| \\cos \\theta$   \r\n",
+        "\r\n",
+        "ただし $0^\\circ \\leq \\theta \\leq 180^\\circ$ で定義される実数である。  \r\n",
+        "\r\n",
+        "$\\overrightarrow{a}=\\overrightarrow{0}$ または$ \\overrightarrow{b}=\\overrightarrow{0}$ のときは $ \\overrightarrow{a} \\cdot \\overrightarrow{b} = 0 $ と定める。"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "oZjcaWOpNisc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 91
-        },
-        "outputId": "5aaf8748-c744-4757-bfcb-20f83b53cc1f"
+        "id": "aAwSU-c3eciU"
       },
       "source": [
-        "# ベクトルの内積の成分表示\r\n",
-        "%%latex\r\n",
-        "成分表示\\\\\r\n",
-        "\\overrightarrow{a} = (a_1,a_2), \\overrightarrow{b} = (b_1,b_2)~のとき\\\\\r\n",
-        "\\overrightarrow{a} \\cdot \\overrightarrow{b} = a_1 b_1 + a_2 b_2"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "成分表示\\\\\n\\overrightarrow{a} = (a_1,a_2), \\overrightarrow{b} = (b_1,b_2)~のとき\\\\\n\\overrightarrow{a} \\cdot \\overrightarrow{b} = a_1 b_1 + a_2 b_2",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**ベクトルの内積の成分表示**\r\n",
+        "\r\n",
+        "**成分表示**\r\n",
+        "\r\n",
+        "$\\overrightarrow{a} = (a_1,a_2), \\overrightarrow{b} = (b_1,b_2)$ のとき\r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\cdot \\overrightarrow{b} = a_1 b_1 + a_2 b_2$"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 303
-        },
-        "id": "7mC9cS91TPOc",
-        "outputId": "5adcde7a-175d-46ee-a0aa-456333a706a9"
+        "id": "EJOzYeWyeyAU"
       },
       "source": [
-        "%%latex\r\n",
-        "内積の性質\\\\\r\n",
-        "\\overrightarrow{a} \\cdot \\overrightarrow{a} = |\\overrightarrow{a}|^2 \\\\\r\n",
-        "\\overrightarrow{a} \\cdot \\overrightarrow{b} = \\overrightarrow{b} \\cdot \\overrightarrow{a} \\\\\r\n",
-        "\\overrightarrow{a} \\cdot (\\overrightarrow{b} + \\overrightarrow{c}) = \\overrightarrow{a} \\cdot \\overrightarrow{b} + \\overrightarrow{a} \\cdot \\overrightarrow{c} \\\\\r\n",
-        "(\\overrightarrow{a} + \\overrightarrow{b}) \\cdot \\overrightarrow{c} = \\overrightarrow{a} \\cdot \\overrightarrow{c} + \\overrightarrow{b} \\cdot \\overrightarrow{c} \\\\\r\n",
-        "(k \\overrightarrow{a}) \\cdot \\overrightarrow{b} = \\overrightarrow{a}(k \\overrightarrow{b}) = k(\\overrightarrow{a} \\cdot \\overrightarrow{b}) \\\\\r\n",
-        "\\quad \\quad k \\overrightarrow{a} \\cdot \\overrightarrow{b} ~とも書く。 k~は実数。\\\\\r\n",
-        "一般に、p,q,r,s~が実数のとき\\\\\r\n",
-        "\\quad \\quad \r\n",
-        "(p\\overrightarrow{a} + q\\overrightarrow{b}) \\cdot (r\\overrightarrow{c} + s\\overrightarrow{d}) =\r\n",
-        "pr\\overrightarrow{a} \\cdot \\overrightarrow{c} + ps\\overrightarrow{a} \\cdot \\overrightarrow{d} + qr\\overrightarrow{b} \\cdot \\overrightarrow{c} + qs\\overrightarrow{b} \\cdot \\overrightarrow{d}\\\\\r\n",
-        "\\\\[1em]\r\n",
-        "不等式\\quad -|\\overrightarrow{a}||\\overrightarrow{b}| \\leq \\overrightarrow{a} \\cdot \\overrightarrow{b} \\leq |\\overrightarrow{a}||\\overrightarrow{b}| \\\\\r\n",
-        "\\quad \\quad \\Longleftrightarrow |\\overrightarrow{a} \\cdot \\overrightarrow{b}| \\leq |\\overrightarrow{a}||\\overrightarrow{b}| \\\\\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "内積の性質\\\\\n\\overrightarrow{a} \\cdot \\overrightarrow{a} = |\\overrightarrow{a}|^2 \\\\\n\\overrightarrow{a} \\cdot \\overrightarrow{b} = \\overrightarrow{b} \\cdot \\overrightarrow{a} \\\\\n\\overrightarrow{a} \\cdot (\\overrightarrow{b} + \\overrightarrow{c}) = \\overrightarrow{a} \\cdot \\overrightarrow{b} + \\overrightarrow{a} \\cdot \\overrightarrow{c} \\\\\n(\\overrightarrow{a} + \\overrightarrow{b}) \\cdot \\overrightarrow{c} = \\overrightarrow{a} \\cdot \\overrightarrow{c} + \\overrightarrow{b} \\cdot \\overrightarrow{c} \\\\\n(k \\overrightarrow{a}) \\cdot \\overrightarrow{b} = \\overrightarrow{a}(k \\overrightarrow{b}) = k(\\overrightarrow{a} \\cdot \\overrightarrow{b}) \\\\\n\\quad \\quad k \\overrightarrow{a} \\cdot \\overrightarrow{b} ~とも書く。 k~は実数。\\\\\n一般に、p,q,r,s~が実数のとき\\\\\n\\quad \\quad \n(p\\overrightarrow{a} + q\\overrightarrow{b}) \\cdot (r\\overrightarrow{c} + s\\overrightarrow{d}) =\npr\\overrightarrow{a} \\cdot \\overrightarrow{c} + ps\\overrightarrow{a} \\cdot \\overrightarrow{d} + qr\\overrightarrow{b} \\cdot \\overrightarrow{c} + qs\\overrightarrow{b} \\cdot \\overrightarrow{d}\\\\\n\\\\[1em]\n不等式\\quad -|\\overrightarrow{a}||\\overrightarrow{b}| \\leq \\overrightarrow{a} \\cdot \\overrightarrow{b} \\leq |\\overrightarrow{a}||\\overrightarrow{b}| \\\\\n\\quad \\quad \\Longleftrightarrow |\\overrightarrow{a} \\cdot \\overrightarrow{b}| \\leq |\\overrightarrow{a}||\\overrightarrow{b}| \\\\",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "内積の性質\r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\cdot \\overrightarrow{a} = |\\overrightarrow{a}|^2$\r\n",
+        "\r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\cdot \\overrightarrow{b} = \\overrightarrow{b} \\cdot \\overrightarrow{a}$\r\n",
+        "\r\n",
+        "$\\overrightarrow{a} \\cdot (\\overrightarrow{b} + \\overrightarrow{c}) \r\n",
+        "= \\overrightarrow{a} \\cdot \\overrightarrow{b} \r\n",
+        "+ \\overrightarrow{a} \\cdot \\overrightarrow{c} $\r\n",
+        "\r\n",
+        "$(\\overrightarrow{a} + \\overrightarrow{b}) \\cdot \\overrightarrow{c} \r\n",
+        "= \\overrightarrow{a} \\cdot \\overrightarrow{c} + \\overrightarrow{b} \\cdot \\overrightarrow{c} $\r\n",
+        "\r\n",
+        "$(k \\overrightarrow{a}) \\cdot \\overrightarrow{b} \r\n",
+        "= \\overrightarrow{a}(k \\overrightarrow{b}) \r\n",
+        "= k(\\overrightarrow{a} \\cdot \\overrightarrow{b}) $\r\n",
+        "\r\n",
+        "$k \\overrightarrow{a} \\cdot \\overrightarrow{b}$ とも書く。 $k$ は実数。\r\n",
+        "\r\n",
+        "一般に、$p,q,r,s$ が実数のとき\r\n",
+        "\r\n",
+        "$(p\\overrightarrow{a} + q\\overrightarrow{b}) \\cdot (r\\overrightarrow{c} + s\\overrightarrow{d}) \r\n",
+        "= pr\\overrightarrow{a} \\cdot \\overrightarrow{c} + ps\\overrightarrow{a} \\cdot \\overrightarrow{d} + qr\\overrightarrow{b} \\cdot \\overrightarrow{c} + qs\\overrightarrow{b} \\cdot \\overrightarrow{d}$\r\n",
+        "\r\n",
+        "**不等式**  \r\n",
+        "$-|\\overrightarrow{a}||\\overrightarrow{b}| \\leq \\overrightarrow{a} \\cdot \\overrightarrow{b} \\leq |\\overrightarrow{a}||\\overrightarrow{b}|\r\n",
+        "\\Longleftrightarrow |\\overrightarrow{a} \\cdot \\overrightarrow{b}| \\leq |\\overrightarrow{a}||\\overrightarrow{b}|$\r\n",
+        "\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ofv_jJkPgFun"
+      },
+      "source": [
+        "実験\r\n",
+        "\r\n",
+        "小文字のベクトルを overrightarrow でなく、mathbf で書くという話があるので、colab 上でどっちが見やすいか実験 => そのとき使っているテキスト通りにする。\r\n",
+        "\r\n",
+        "$(p\\overrightarrow{a} + q\\overrightarrow{b}) \\cdot (r\\overrightarrow{c} + s\\overrightarrow{d}) \r\n",
+        "= pr\\overrightarrow{a} \\cdot \\overrightarrow{c} + ps\\overrightarrow{a} \\cdot \\overrightarrow{d} + qr\\overrightarrow{b} \\cdot \\overrightarrow{c} + qs\\overrightarrow{b} \\cdot \\overrightarrow{d}$\r\n",
+        "\r\n",
+        "$(p\\mathbf{a} + q\\mathbf{b}) \\cdot (r\\mathbf{c} + s\\mathbf{d}) \r\n",
+        "= pr\\mathbf{a} \\cdot \\mathbf{c} + ps\\mathbf{a} \\cdot \\mathbf{d} + qr\\mathbf{b} \\cdot \\mathbf{c} + qs\\mathbf{b} \\cdot \\mathbf{d}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vOnTPmkBdIQF"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
