Colaboratory を使用して作成しました

--- a/linear_fujioka.ipynb
+++ b/linear_fujioka.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_fujioka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/p0YnxNOvmYFAFZStwmee",
+      "authorship_tag": "ABX9TyNpFL9TyhiTxeu8cWiKu/0k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,18 +169,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "YonkyqdHF8Pt",
-        "outputId": "52444481-e5e4-427f-a8ba-4c5683480c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
-        }
+        },
+        "outputId": "52444481-e5e4-427f-a8ba-4c5683480c35"
       },
       "source": [
         "from sympy import *\r\n",
         "A=Matrix([[1,2,3],[4,5,6]])\r\n",
         "display(A)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -240,7 +240,7 @@
         "    a_{mj} \r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1380,9 +1380,9 @@
         "id": "huB4rVGbdjkm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 46
+          "height": 87
         },
-        "outputId": "e1339c4e-a489-4716-ffb2-d32873d50542"
+        "outputId": "126b78e3-2afd-4e97-a427-92a607ed9829"
       },
       "source": [
         "from sympy import *\r\n",
@@ -1390,9 +1390,10 @@
         "init_printing()\r\n",
         "display(Markdown(\"問題\"))\r\n",
         "a,b,c = symbols('a,b,c')\r\n",
-        "A = Matrix([[a**2+b**2, a*b+b*c],[a*b+b*c, b**2+c**2],[]])"
+        "A = Matrix([[a**2+b**2, a*b+b*c],[a*b+b*c, b**2+c**2],[]])\r\n",
+        "display(A)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1400,6 +1401,22 @@
             "text/markdown": "問題",
             "text/plain": [
               "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}a^{2} + b^{2} & a b + b c\\\\a b + b c & b^{2} + c^{2}\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡  2    2            ⎤\n",
+              "⎢ a  + b    a⋅b + b⋅c⎥\n",
+              "⎢                    ⎥\n",
+              "⎢             2    2 ⎥\n",
+              "⎣a⋅b + b⋅c   b  + c  ⎦"
             ]
           },
           "metadata": {
