Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGrblQkY1sFCV4xH+Ok6h5",
+      "authorship_tag": "ABX9TyN4+BQgSE+ZKRHALHscEYEc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -565,178 +565,89 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vOnTPmkBdIQF"
+        "id": "8HToY9PbyZm6"
       },
       "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bG-QVoo94J3_",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 171
-        },
-        "outputId": "147c1454-6b4c-4edd-ae60-42e30a0a6f44"
-      },
-      "source": [
-        "# ベクトル方程式と座標 p.306\r\n",
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "ベクトル方程式と座標\\\\\r\n",
-        "\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)~とすると~\\mathrm{P}(x,y)~であり、\r\n",
-        "成分と座標が結びつく。 例えば、\\\\\r\n",
-        "1.~\\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d}~から\r\n",
-        "\\left\\{ \r\n",
+        "**ベクトル方程式と座標**\r\n",
+        "\r\n",
+        "$\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)$ とすると $ \\mathrm{P}(x,y) $ であり、\r\n",
+        "成分と座標が結びつく。 例えば、\r\n",
+        "\r\n",
+        "1. $ \\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d} $ から\r\n",
+        "$ \\displaystyle \\left\\{ \r\n",
         "\\begin{array}{r}\r\n",
-        " x=x_1+ct\\\\\r\n",
+        " x=x_1+ct \\\\\r\n",
         " y=y_1+dt\r\n",
         "\\end{array}\r\n",
         "\\right.\r\n",
-        "\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\\r\n",
-        "2.~\\overrightarrow{n} \\cdot (\\overrightarrow{p}-\\overrightarrow{a})=0~ から~ a(x-x_1)+b(y-y_1)=0 \\quad \\overrightarrow{n}=(a,b)~ は法線ベクトル\\\\\r\n",
-        "3.~|\\overrightarrow{p}-\\overrightarrow{c}|^2=r^2~から \\quad (x-a)^2+(y-b)^2=r^2\\\\\r\n",
-        "4.~(\\overrightarrow{p}-\\overrightarrow{c}) \\cdot (\\overrightarrow{p_0}-\\overrightarrow{c})=r^2~ [円の接線]~ から ~(x-a)(x_1-a)+(y-b)(y_1-b)=r^2\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\displaystyle\nベクトル方程式と座標\\\\\n\\mathrm{O}(0,0), \\overrightarrow{\\mathrm{OP}}=(x,y)~とすると~\\mathrm{P}(x,y)~であり、\n成分と座標が結びつく。 例えば、\\\\\n1.~\\overrightarrow{p}=\\overrightarrow{a}+t\\overrightarrow{d}~から\n\\left\\{ \n\\begin{array}{r}\n x=x_1+ct\\\\\n y=y_1+dt\n\\end{array}\n\\right.\n\\quad \\quad \\overrightarrow{d}=(c,d)~は方向ベクトル\\\\\n2.~\\overrightarrow{n} \\cdot (\\overrightarrow{p}-\\overrightarrow{a})=0~ から~ a(x-x_1)+b(y-y_1)=0 \\quad \\overrightarrow{n}=(a,b)~ は法線ベクトル\\\\\n3.~|\\overrightarrow{p}-\\overrightarrow{c}|^2=r^2~から \\quad (x-a)^2+(y-b)^2=r^2\\\\\n4.~(\\overrightarrow{p}-\\overrightarrow{c}) \\cdot (\\overrightarrow{p_0}-\\overrightarrow{c})=r^2~ [円の接線]~ から ~(x-a)(x_1-a)+(y-b)(y_1-b)=r^2\n\n\n",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "\\quad \\quad \\overrightarrow{d}=(c,d) $ は方向ベクトル\r\n",
+        "\r\n",
+        "2. $ \\overrightarrow{n} \\cdot (\\overrightarrow{p}-\\overrightarrow{a})=0 $  から $  a(x-x_1)+b(y-y_1)=0 \\quad \\overrightarrow{n}=(a,b) $  は法線ベクトル\r\n",
+        "\r\n",
+        "3. $ |\\overrightarrow{p}-\\overrightarrow{c}|^2=r^2 $ から $ \\quad (x-a)^2+(y-b)^2=r^2 $\r\n",
+        "\r\n",
+        "4. $ (\\overrightarrow{p}-\\overrightarrow{c}) \\cdot (\\overrightarrow{p_0}-\\overrightarrow{c})=r^2 $  [円の接線] から  $ (x-a)(x_1-a)+(y-b)(y_1-b)=r^2$"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ZxaeQ2ScWrkk",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 91
-        },
-        "outputId": "3cbe712a-be50-42e1-8879-12fdcf132c6c"
+        "id": "psD9WuSiz2Vq"
       },
       "source": [
-        "# ベクトルの応用 p.48\r\n",
-        "%%latex\r\n",
-        "共線条件\\\\\r\n",
-        "1.~3点~\\mathrm{A,B,C}~が一直線上にある\r\n",
-        "\\quad \\quad \\Longleftrightarrow \\quad \\overrightarrow{\\mathrm{AC}} = k \\overrightarrow{\\mathrm{AB}}~となる~k~がある。\\\\\r\n",
-        "2.~点~\\mathrm{P}~が直線~\\mathrm{AB}~上にある\r\n",
-        "\\quad \\quad \\Longleftrightarrow \\quad \\overrightarrow{\\mathrm{OP}} = s \\overrightarrow{\\mathrm{OA}} + t\\overrightarrow{\\mathrm{OB}}, s+t=1~\r\n",
-        "となる実数~s,t~がある\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "共線条件\\\\\n1.~3点~\\mathrm{A,B,C}~が一直線上にある\n\\quad \\quad \\Longleftrightarrow \\quad \\overrightarrow{\\mathrm{AC}} = k \\overrightarrow{\\mathrm{AB}}~となる~k~がある。\\\\\n2.~点~\\mathrm{P}~が直線~\\mathrm{AB}~上にある\n\\quad \\quad \\Longleftrightarrow \\quad \\overrightarrow{\\mathrm{OP}} = s \\overrightarrow{\\mathrm{OA}} + t\\overrightarrow{\\mathrm{OB}}, s+t=1~\nとなる実数~s,t~がある",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**ベクトルの応用 p.48**\r\n",
+        "\r\n",
+        "**共線条件**\r\n",
+        "\r\n",
+        "1. 3点 $ \\mathrm{A,B,C} $ が一直線上にある \r\n",
+        "$\\quad \\Longleftrightarrow \\quad \\overrightarrow{\\mathrm{AC}} = k \\overrightarrow{\\mathrm{AB}} $ となる $ k $ がある。\r\n",
+        "\r\n",
+        "2. 点 $ \\mathrm{P} $ が直線 $ \\mathrm{AB} $ 上にある\r\n",
+        "$ \\quad \\Longleftrightarrow \\quad \\overrightarrow{\\mathrm{OP}} = s \\overrightarrow{\\mathrm{OA}} + t\\overrightarrow{\\mathrm{OB}}, s+t=1 $ \r\n",
+        "となる実数 $ s,t $ がある"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "BksfvRUb8aDR",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        },
-        "outputId": "dc68393c-01ba-4934-f1b7-c8818bb109b1"
+        "id": "pvySS9eD0qXp"
       },
       "source": [
-        "# 図形とベクトルの内積 p.48\r\n",
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "図形とベクトルの内積\\\\\r\n",
-        "1.~線分の長さの~2~乗\\\\\r\n",
-        "\\quad \\mathrm{AB}^2 = |\\overrightarrow{\\mathrm{AB}}|^2 = \\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{AB}}\r\n",
-        "~というように、線分の長さの~2~乗は内積で表される\\\\\r\n",
-        "2.~垂直条件\\\\\r\n",
-        "\\quad \\mathrm{AB} \\neq 0, \\mathrm{CD} \\neq 0~のとき~ \r\n",
-        "\\mathrm{AB} \\perp \\mathrm{CD} \\Longleftrightarrow \\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{CD}} = 0 \\\\\r\n",
-        "3.~\\mathrm{AB}, \\mathrm{CD} ~のなす角 \\\\\r\n",
-        "\\quad \\mathrm{AB}, \\mathrm{CD} ~のなす角 ~\\theta~ (0^\\circ \\leq \\theta \\leq 180^\\circ)\r\n",
-        "~から~ \\cos \\theta = \\frac{\\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{CD}}}{|AB||CD|}~ を利用。\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\displaystyle\n図形とベクトルの内積\\\\\n1.~線分の長さの~2~乗\\\\\n\\quad \\mathrm{AB}^2 = |\\overrightarrow{\\mathrm{AB}}|^2 = \\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{AB}}\n~というように、線分の長さの~2~乗は内積で表される\\\\\n2.~垂直条件\\\\\n\\quad \\mathrm{AB} \\neq 0, \\mathrm{CD} \\neq 0~のとき~ \n\\mathrm{AB} \\perp \\mathrm{CD} \\Longleftrightarrow \\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{CD}} = 0 \\\\\n3.~\\mathrm{AB}, \\mathrm{CD} ~のなす角 \\\\\n\\quad \\mathrm{AB}, \\mathrm{CD} ~のなす角 ~\\theta~ (0^\\circ \\leq \\theta \\leq 180^\\circ)\n~から~ \\cos \\theta = \\frac{\\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{CD}}}{|AB||CD|}~ を利用。",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**図形とベクトルの内積 p.48**\r\n",
+        "\r\n",
+        "1. 線分の長さの 2乗  \r\n",
+        "$ \\quad \\mathrm{AB}^2 = |\\overrightarrow{\\mathrm{AB}}|^2 = \\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{AB}}$\r\n",
+        " というように、線分の長さの 2乗は内積で表される\r\n",
+        "\r\n",
+        "2. 垂直条件  \r\n",
+        "$ \\quad \\mathrm{AB} \\neq 0, \\mathrm{CD} \\neq 0 $ のとき $  \r\n",
+        "\\mathrm{AB} \\perp \\mathrm{CD} \\Longleftrightarrow \\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{CD}} = 0 $\r\n",
+        "\r\n",
+        "3. $ \\mathrm{AB}, \\mathrm{CD}  $ のなす角  \r\n",
+        "$\\quad \\mathrm{AB}, \\mathrm{CD}  $ のなす角  $ \\theta (0^\\circ \\leq \\theta \\leq 180^\\circ)$ から $ \\displaystyle  \\cos \\theta = \\frac{\\overrightarrow{\\mathrm{AB}} \\cdot \\overrightarrow{\\mathrm{CD}}}{|AB||CD|} $  を利用。"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "eZXJVKG5BD0w",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 265
-        },
-        "outputId": "09a0eaba-049c-4f85-ac7e-2c2db0b65594"
+        "id": "Q50NJB0b1_o7"
       },
       "source": [
-        "# メラネウスの定理、チェバの定理 p.48\r\n",
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "1.~メネラウスの定理\\\\\r\n",
-        "\\triangle \\mathrm{ABC}~ の辺~ \\mathrm{BC, CA, AB}~ またはその延長が、三角形の頂点を通らない~1~つの直線と\\\\\r\n",
-        "それぞれ点\r\n",
-        "~\\mathrm{P,Q,R}~ で交わるとき\\\\[1em]\r\n",
-        "\\quad \\quad \\quad \\quad \r\n",
-        "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
-        "\\\\[1em]\r\n",
-        "2.~チェバの定理\\\\\r\n",
-        "\\triangle \\mathrm{ABC}~ の~3~頂点~ \\mathrm{A,B,C}~ \r\n",
-        "と三角形の辺上にもその延長上にもない点~O~とを結ぶ直線が、\\\\\r\n",
-        "対辺~\\mathrm{BC, CA, AB}~ \r\n",
-        "またはその延長と交わるとき、交点をそれぞれ~\\mathrm{P,Q,R}~ とすると\\\\[1em]\r\n",
-        "\\quad \\quad \\quad \\quad \r\n",
-        "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\r\n",
-        "\r\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\\displaystyle\n1.~メネラウスの定理\\\\\n\\triangle \\mathrm{ABC}~ の辺~ \\mathrm{BC, CA, AB}~ またはその延長が、三角形の頂点を通らない~1~つの直線と\\\\\nそれぞれ点\n~\\mathrm{P,Q,R}~ で交わるとき\\\\[1em]\n\\quad \\quad \\quad \\quad \n\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\n\\\\[1em]\n2.~チェバの定理\\\\\n\\triangle \\mathrm{ABC}~ の~3~頂点~ \\mathrm{A,B,C}~ \nと三角形の辺上にもその延長上にもない点~O~とを結ぶ直線が、\\\\\n対辺~\\mathrm{BC, CA, AB}~ \nまたはその延長と交わるとき、交点をそれぞれ~\\mathrm{P,Q,R}~ とすると\\\\[1em]\n\\quad \\quad \\quad \\quad \n\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1\\\\\n",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "**メラネウスの定理、チェバの定理 p.48**\r\n",
+        "\r\n",
+        "1. メネラウスの定理  \r\n",
+        "$ \\triangle \\mathrm{ABC} $ の辺 $ \\mathrm{BC, CA, AB} $ またはその延長が、三角形の頂点を通らない 1つの直線とそれぞれ点\r\n",
+        "$\\mathrm{P,Q,R} $ で交わるとき  \r\n",
+        "$ \\quad \\quad \\quad \\quad \\displaystyle\r\n",
+        "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1 $\r\n",
+        "\r\n",
+        "2. チェバの定理  \r\n",
+        "$\\triangle \\mathrm{ABC} $ の 3頂点 $ \\mathrm{A,B,C} $ \r\n",
+        "と三角形の辺上にもその延長上にもない点 $O $とを結ぶ直線が、\r\n",
+        "対辺 $\\mathrm{BC, CA, AB} $ \r\n",
+        "またはその延長と交わるとき、交点をそれぞれ $\\mathrm{P,Q,R} $ とすると  \r\n",
+        "$\\quad \\quad \\quad \\quad \\displaystyle \r\n",
+        "\\frac{\\mathrm{BP}}{\\mathrm{PC}} \\cdot \\frac{\\mathrm{CQ}}{\\mathrm{QA}} \\cdot \\frac{\\mathrm{AR}}{\\mathrm{RB}} = 1$\r\n"
       ]
     },
     {
@@ -749,61 +660,47 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "zWQuOntckH-N",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 337
-        },
-        "outputId": "f27010c6-71f9-4abd-ac9b-c2bb326b167e"
+        "id": "A4Hpv3oB3t3x"
       },
       "source": [
-        "# 直線、平面の位置関係\r\n",
-        "%%latex\r\n",
-        "直線、平面の位置関係\\\\\r\n",
-        "1.~2~直線の位置関係\\\\\r\n",
-        "\\bullet~ 同一平面上にあって、共有点がない \\quad \\cdots \\cdots~ 平行である\\\\\r\n",
-        "\\bullet~ 同一平面上にあって、ただ~1~つの共有点をもつ \\quad \\cdots \\cdots~ 交わる\\\\\r\n",
-        "\\bullet~ 同一平面上にない \\quad \\cdots \\cdots~ ねじれの位置にある\\\\[0.8em]\r\n",
+        "直線、平面の位置関係\r\n",
         "\r\n",
-        "2.~直線と平面の位置関係\\\\\r\n",
-        "\\bullet~ 共有点がない \\quad \\cdots \\cdots~ 平行である\\\\\r\n",
-        "\\bullet~ ただ~1~つの共有点をもつ \\quad \\cdots \\cdots~ 交わる\\\\\r\n",
-        "\\bullet~ 直線が平面に含まれる\\\\[0.8em]\r\n",
+        "1. 2直線の位置関係  \r\n",
+        "  - 同一平面上にあって、共有点がない $ \\quad \\cdots \\cdots $ 平行である\r\n",
+        "  - 同一平面上にあって、ただ 1つの共有点をもつ $ \\quad \\cdots \\cdots $ 交わる\r\n",
+        "  - 同一平面上にない $ \\quad \\cdots \\cdots $ ねじれの位置にある\r\n",
         "\r\n",
-        "3.~2~平面の位置関係\\\\\r\n",
-        "\\bullet~ 共有点がない \\quad \\cdots \\cdots~ 平行である\\\\\r\n",
-        "\\bullet~ 共有点がある \\quad \\cdots \\cdots~ 交わる\\\\[0.8em]\r\n",
         "\r\n",
-        "4.~2~平面のなす角\\\\\r\n",
-        "2~平面の交線上の~1~点から交線に垂直に平面上に引いた~2~直線のなす角"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "直線、平面の位置関係\\\\\n1.~2~直線の位置関係\\\\\n\\bullet~ 同一平面上にあって、共有点がない \\quad \\cdots \\cdots~ 平行である\\\\\n\\bullet~ 同一平面上にあって、ただ~1~つの共有点をもつ \\quad \\cdots \\cdots~ 交わる\\\\\n\\bullet~ 同一平面上にない \\quad \\cdots \\cdots~ ねじれの位置にある\\\\[0.8em]\n\n2.~直線と平面の位置関係\\\\\n\\bullet~ 共有点がない \\quad \\cdots \\cdots~ 平行である\\\\\n\\bullet~ ただ~1~つの共有点をもつ \\quad \\cdots \\cdots~ 交わる\\\\\n\\bullet~ 直線が平面に含まれる\\\\[0.8em]\n\n3.~2~平面の位置関係\\\\\n\\bullet~ 共有点がない \\quad \\cdots \\cdots~ 平行である\\\\\n\\bullet~ 共有点がある \\quad \\cdots \\cdots~ 交わる\\\\[0.8em]\n\n4.~2~平面のなす角\\\\\n2~平面の交線上の~1~点から交線に垂直に平面上に引いた~2~直線のなす角",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "2. 直線と平面の位置関係  \r\n",
+        "  - 共有点がない $ \\quad \\cdots \\cdots $ 平行である\r\n",
+        "  - ただ 1つの共有点をもつ $ \\quad \\cdots \\cdots $ 交わる\r\n",
+        "  - 直線が平面に含まれる\r\n",
+        "\r\n",
+        "\r\n",
+        "3. 2平面の位置関係\r\n",
+        "  - 共有点がない $ \\quad \\cdots \\cdots $ 平行である\r\n",
+        "  - 共有点がある $ \\quad \\cdots \\cdots $ 交わる\r\n",
+        "\r\n",
+        "\r\n",
+        "4. 2平面のなす角  \r\n",
+        "2平面の交線上の 1点から交線に垂直に平面上に引いた 2直線のなす角"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        },
-        "id": "UMnMGx9i3uJM",
-        "outputId": "7ab14c0d-f4d7-440a-d845-5a1ff6505ae4"
+        "id": "vOnTPmkBdIQF"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qJicf3gG6IGU"
       },
       "source": [
         "# p.58\r\n",
@@ -815,7 +712,32 @@
         "このとき~l~と~m~は直交するという。\\\\[0.8em]\r\n",
         "\r\n",
         "2.~直線と平面の垂直\\\\[0.8em]\r\n",
-        "直線~h~が、平面~\\alpha~上のすべての直線に垂直であるとき、~h~は~\\alpha~に垂直であるといい、h \\perp \\alpha~で表す。\\\\\r\n"
+        "直線~h~が、平面~\\alpha~上のすべての直線に垂直であるとき、~h~は~\\alpha~に垂直であるといい、h \\perp \\alpha~で表す。\\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "UMnMGx9i3uJM",
+        "cellView": "form",
+        "outputId": "7ab14c0d-f4d7-440a-d845-5a1ff6505ae4"
+      },
+      "source": [
+        "#@title\n",
+        "# p.58\n",
+        "%%latex\n",
+        "1.~なす角\\\\[0.8em]\n",
+        "2~直線~l,m~が平行でないとき、任意の~1~点を通る~2~直線~l',m'~を、それぞれ~l,m~に平行に引く。\\\\\n",
+        "~l',m'~のなす角を2~直線~l,m~のなす角という。\\\\\n",
+        "この角が直角であるとき、~l~と~m~は垂直であるといい、l \\perp m~と書く。 \\\\\n",
+        "このとき~l~と~m~は直交するという。\\\\[0.8em]\n",
+        "\n",
+        "2.~直線と平面の垂直\\\\[0.8em]\n",
+        "直線~h~が、平面~\\alpha~上のすべての直線に垂直であるとき、~h~は~\\alpha~に垂直であるといい、h \\perp \\alpha~で表す。\\\\\n"
       ],
       "execution_count": null,
       "outputs": [
