Colaboratory を使用して作成しました

--- a/arabic01.ipynb
+++ b/arabic01.ipynb
@@ -31,14 +31,12 @@
       },
       "source": [
         "# メモ\n",
+        "コードセルでは %%html とすると、html が書けるのでそれを利用すると、\n",
+        "文字に色をつけたり、大きくしたりができる。\n",
         "\n",
-        "このノートブックは Colab で開いて読んでください。 \n",
+        "それを利用してアラビア語の勉強をする、というアイデア。\n",
         "\n",
-        "アイデアは Colab というか Jupyter の環境のテキストはマークダウンなので基本的に文字に色をつけたり、大きくしたりができない。 \n",
-        "\n",
-        "だけど、コードセルでは %%html とすると、html が書けるのでそれを利用する。\n",
-        "\n",
-        "\n"
+        "うまく表示できたら、メニュー -> 表示 -> コードを非表示、でコードを隠してしまえばじゃまにならない。\n"
       ]
     },
     {
@@ -81,8 +79,6 @@
         "id": "q9kMf95tgT3V"
       },
       "source": [
-        "これを利用して、アラビア語の勉強をする。\r\n",
-        "\r\n",
         "とりあえずduolingoのtipsを読み直そうという計画。"
       ]
     },
