Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -367,7 +367,8 @@
         "id": "JJRGMDwVF90w"
       },
       "source": [
-        "# ドル`$`マーク\n"
+        "# ドル`$`マーク\n",
+        "この本は\\$35.40。\n"
       ]
     },
     {
@@ -592,33 +593,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NgmgaN0pnnAY"
+      },
+      "source": [
+        "# フォントの実験"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ohnAEa3ppMIq"
+      },
+      "source": [
+        "文章をその部分だけ違うフォントで、というような使い方はできない。 例えば \\mathrm で This is a pen と書くとか。\r\n",
+        "\r\n",
+        "$\\mathrm{This}$ $\\mathrm{setence}$ $\\mathrm{is}$ $\\mathrm{written\\,in }$ $\\mathrm{mathrm.}$\r\n",
+        "\r\n",
+        "$\\mathrm{\\text{this is a pen.}}$"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iWBQ3wdyhf7X",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 182
+          "height": 202
         },
-        "outputId": "8759294f-3c35-43bb-ea1b-1d3b276ac7cc"
+        "outputId": "f685c1ad-c82a-44b0-dea2-1fe392528228"
       },
       "source": [
         "%%latex\r\n",
-        "\\mathrm{a b c d e f A B C }\\\\\r\n",
-        "\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使う\r\n",
+        "\\mathrm{a b c d e f A B C}\\\\\r\n",
+        "\\mathbf{a b c d e f A B C} \\\\ %%ベクトルに使う\r\n",
         "\\bm{a b c d e f A B C }\\\\ \r\n",
         "\\text{a b c d e f A B C }\\\\\r\n",
         "\\mathbb{a b c d e f A B C }\\\\\r\n",
         "% \\mathbbm{a b c d e f A B C }\\\\\r\n",
         "\\mathcal {abcdefABCDEF}\\\\\r\n",
         "\\mathfrak {abcdefABCDEF}\\\\\r\n",
-        "\\mathit {abcdefABCDEF}\\\\"
+        "\\mathit {abcdefABCDEF}\\\\\r\n",
+        "\\mathrm{\\text{this is a pen.}}"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\mathrm{a b c d e f A B C }\\\\\n\\mathbf{a b c d e f A B C }\\\\ %%ベクトルに使う\n\\bm{a b c d e f A B C }\\\\ \n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n% \\mathbbm{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\",
+            "text/latex": "\\mathrm{a b c d e f A B C}\\\\\n\\mathbf{a b c d e f A B C} \\\\ %%ベクトルに使う\n\\bm{a b c d e f A B C }\\\\ \n\\text{a b c d e f A B C }\\\\\n\\mathbb{a b c d e f A B C }\\\\\n% \\mathbbm{a b c d e f A B C }\\\\\n\\mathcal {abcdefABCDEF}\\\\\n\\mathfrak {abcdefABCDEF}\\\\\n\\mathit {abcdefABCDEF}\\\\\n\\mathrm{\\text{this is a pen.}}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
