Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNRGWdW8j5VasTKWK1yu8mX",
+      "authorship_tag": "ABX9TyPi5EQTa2ehLyaCFChyCy/N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,6 +63,7 @@
       },
       "source": [
         "**同値**  \r\n",
+        "\r\n",
         "$\\vec a , \\vec b$ が等しいというのは、向きが同じで大きさが等しいことでこれを $\\vec a = \\vec b$ で表す。"
       ]
     },
@@ -77,6 +78,22 @@
         "**実数倍** $k \\overrightarrow{a}$  \r\n",
         "**交換法則** $\\overrightarrow{a}+\\overrightarrow{b}=\\overrightarrow{b}+\\overrightarrow{a}$  \r\n",
         "**結合法則** $(\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qSx99Fz3-AMt"
+      },
+      "source": [
+        "$ \\begin{array}{lll}\r\n",
+        "&加法 & \\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}&=\\overrightarrow{\\mathrm{OB}} \\\\\r\n",
+        "&減法 & \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}&=\\overrightarrow{\\mathrm{BA}} \\\\\r\n",
+        "&実数倍 & k \\overrightarrow{a} \\\\\r\n",
+        "& 交換法則 & \\overrightarrow{a}+\\overrightarrow{b}&=\\overrightarrow{b}+\\overrightarrow{a} \\\\\r\n",
+        "&結合法則 & (\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}&=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})\r\n",
+        "\\end{array} \r\n",
+        "$\r\n"
       ]
     },
     {
