Colaboratory を使用して作成しました

--- a/chartmathb01vector.ipynb
+++ b/chartmathb01vector.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb01vector.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPi5EQTa2ehLyaCFChyCy/N",
+      "authorship_tag": "ABX9TyPq1vSbt0XtG148rp8JPRS/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,28 +70,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RblMad6ueDr_"
-      },
-      "source": [
-        "**加法** $\\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}=\\overrightarrow{\\mathrm{OB}}$  \r\n",
-        "**減法** $\\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}=\\overrightarrow{\\mathrm{BA}}$  \r\n",
-        "**実数倍** $k \\overrightarrow{a}$  \r\n",
-        "**交換法則** $\\overrightarrow{a}+\\overrightarrow{b}=\\overrightarrow{b}+\\overrightarrow{a}$  \r\n",
-        "**結合法則** $(\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "qSx99Fz3-AMt"
       },
       "source": [
         "$ \\begin{array}{lll}\r\n",
-        "&加法 & \\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}&=\\overrightarrow{\\mathrm{OB}} \\\\\r\n",
-        "&減法 & \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}&=\\overrightarrow{\\mathrm{BA}} \\\\\r\n",
-        "&実数倍 & k \\overrightarrow{a} \\\\\r\n",
-        "& 交換法則 & \\overrightarrow{a}+\\overrightarrow{b}&=\\overrightarrow{b}+\\overrightarrow{a} \\\\\r\n",
-        "&結合法則 & (\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}&=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})\r\n",
+        "加法 & \\overrightarrow{\\mathrm{OA}}+\\overrightarrow{\\mathrm{AB}}&=\\overrightarrow{\\mathrm{OB}} \\\\\r\n",
+        "減法 & \\overrightarrow{\\mathrm{OA}}-\\overrightarrow{\\mathrm{OB}}&=\\overrightarrow{\\mathrm{BA}} \\\\\r\n",
+        "実数倍 & k \\overrightarrow{a} \\\\\r\n",
+        "交換法則 & \\overrightarrow{a}+\\overrightarrow{b}&=\\overrightarrow{b}+\\overrightarrow{a} \\\\\r\n",
+        "結合法則 & (\\overrightarrow{a}+\\overrightarrow{b})+\\overrightarrow{c}&=\\overrightarrow{a}+(\\overrightarrow{b}+\\overrightarrow{c})\r\n",
         "\\end{array} \r\n",
         "$\r\n"
       ]
@@ -105,7 +92,45 @@
         "**平行**  \r\n",
         "\r\n",
         "平行は\\, $\\overrightarrow{a} \\parallel \\overrightarrow{b}$ と書く。  \r\n",
-        "日本の平行記号は $/\\!\\!/$というように斜めに書くが、latex では縦の 2本線である。  \r\n",
+        "日本の平行記号は $/\\!\\!/$というように斜めに書くが、latex では縦の 2本線である。  \r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u7F9ZWwJGEiY",
+        "outputId": "a1493463-ca97-4ea6-f734-f993e9a65836",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "source": [
+        "%%latex\r\n",
+        "$/\\!\\!/$"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$/\\!\\!/$",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_TQV7xXdGCXy"
+      },
+      "source": [
         "\r\n",
         "**ベクトルの平行条件**  \r\n",
         "\r\n",
@@ -120,7 +145,7 @@
         "\r\n",
         "$\\overrightarrow{p} = s \\overrightarrow{a} + t \\overrightarrow{b}$ \r\n",
         "\r\n",
-        "ただし,\\, s,\\, t\\, は実数。  \r\n",
+        "ただし、$ s,t$ は実数。  \r\n",
         "\r\n",
         "このことから、次の性質が成り立つ。$k,l,m,n$ は実数とする。   \r\n",
         "\r\n",
@@ -129,6 +154,15 @@
         "特に  \r\n",
         "\r\n",
         "$k\\overrightarrow{a} + l \\overrightarrow{b} = \\overrightarrow{0} \\Longleftrightarrow  k=l=0 $"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FDBt4GHNGy--"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
