Colaboratory を使用して作成しました

--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPLn4bcwxDWw9HQxNmAvNpk",
+      "authorship_tag": "ABX9TyNhUhUmADgV012m7LiDNdh9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,43 +47,7 @@
       },
       "source": [
         "# 一般角\r\n",
-        "\r\n",
-        "平面上で、点 $\\rm O$ を中心として半直線 $\\rm OP$ を回転させるとき、"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 80
-        },
-        "id": "ezOra1-j82X7",
-        "outputId": "c05c5042-a923-455a-f583-d660806aada7"
-      },
-      "source": [
-        "# 参考\r\n",
-        "%%latex\r\n",
-        "% latex 中にコメントを入れるときは、% を使う。\r\n",
-        "% rm は roman の意味か。 これを入れないとイタリックになる。\r\n",
-        "OP\\\\\r\n",
-        "\\mathrm{OP}\\\\\r\n",
-        "OP"
-      ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "% latex 中にコメントを入れるときは、% を使う。\n% rm は roman の意味か。 これを入れないとイタリックになる。\nOP\\\\\n\\mathrm{OP} \\\\\nOP",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "\r\n"
       ]
     },
     {
@@ -92,14 +56,27 @@
         "id": "ZMU81WV99s1i"
       },
       "source": [
-        "一般角\r\n",
+        "**一般角**\r\n",
         "\r\n",
-        "平面上で、点 $\\rm O$ を中心として半直線 $\\rm OP$ を回転させるとき、\r\n",
-        "この半直線 $\\rm OP$ を動径、半直線 $\\rm OX$ を始線という。\r\n",
+        "平面上で、点 $\\mathrm O$ を中心として半直線 $\\mathrm{OP}$ を回転させるとき、\r\n",
+        "\r\n",
+        "この半直線 $\\mathrm{OP}$ を動径、半直線 $\\mathrm{OX}$ を始線という。\r\n",
+        "\r\n",
         "時計の針の回転と逆の向きに図った角度を正の角という。\r\n",
         "\r\n",
-        "$\\rm OX$ と $\\rm OP$ のなす角の一つを $\\alpha$ とすると、\r\n",
-        "\r\n"
+        "$\\mathrm{OX}$ と $\\mathrm{OP}$ のなす角の一つを $\\alpha$ とすると、\r\n",
+        "\r\n",
+        "$\\theta = \\alpha + 360 \\times n$\r\n",
+        "を動径 $\\mathrm{OP}$ の一般角、という。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IVOFN9MtWdxH"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -107,21 +84,23 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 55
         },
         "id": "WVT53wbKJLpu",
-        "outputId": "a45722eb-ac6d-407e-dd81-a9f0a2835f9b"
+        "outputId": "36225dbc-df93-4b87-e95c-b9423b828545"
       },
       "source": [
-        "from IPython.display import Math\r\n",
+        "# sympy の実験 α β を表す\r\n",
+        "# sympy display alpha beta で検索\r\n",
         "from sympy import *\r\n",
+        "from IPython.display import Math\r\n",
         "init_printing()\r\n",
         "alpha, theta  = symbols(r\"\\alpha \\theta\")\r\n",
         "n = symbols('n')\r\n",
         "display(Math(latex(Eq(theta, alpha + 360 * n), mul_symbol='times')))\r\n",
         "print(latex(Eq(theta, alpha + 360 * n), mul_symbol='times'))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
